# bcradio

./: Cargo.toml  Cross.toml  LICENSE  README.md  rust-toolchain
.github/workflows/: release.yml
docker/: Dockerfile_aarch64-unknown-linux-gnu  Dockerfile_aarch64-unknown-linux-musl  Dockerfile_armv7-unknown-linux-gnueabi  Dockerfile_armv7-unknown-linux-musleabihf  Dockerfile_x86_64-unknown-linux-gnu  Dockerfile_x86_64-unknown-linux-musl
inquire/: Cargo.toml
inquire/src/: lib.rs
inquire/src/prompts/: prompt.rs
inquire/src/prompts/select/: mod.rs  prompt.rs
src/: lib.rs  libbc.rs  main.rs  models.rs
src/libbc/: args.rs  http_adapter.rs  http_client.rs  macro.rs  macros.rs  mod.rs  player.rs  playlist.rs  progress_bar.rs  scorer.rs  search.rs  shared_data.rs  sink.rs  stream_adapter.rs  stream_decoder.rs  terminal.rs
src/models/: bc_discover_index.rs  bc_discover_json.rs  bc_discover_tags.rs  bc_error.rs  bc_models.rs  index_models.rs  mod.rs  search_models.rs  shared_data_models.rs
